feat(ui): Improve Products & Cart UI, add CartRepository & CartViewModel, add product cards and bottom cart bar; Hilt binding for cart; in-memory cart implementation; update themes and build configs